--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "author": "John Doe",
   "devDependencies": {
-    "lineman": "~0.34.2"
+    "grunt": "^0.4.5",
+    "lineman": "^0.34.2",
+    "lineman-bower": "0.0.5"
   },
   "scripts": {
     "start": "lineman run",
