--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
     "/vendor/bower",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.0",
+    "angular-ui-router": "~0.2.11"
+  }
 }
