--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "^0.4.5",
     "grunt-protractor-runner": "^1.1.4",
     "lineman": "^0.34.2",
+    "lineman-angular": "^0.3.0",
     "lineman-bower": "0.0.5"
   },
   "scripts": {
